# Covid19_Modeling

./: .gitignore  README.md  data.py  predict.r  pyproject.toml
data/: covid19_forecasted_0424_0507_SH_Whale.csv  covid19_forecasted_0424_0521_SH_Whale.csv  covid19_forecasted_0516_0529_SH_Whale.csv  covid19_forecasted_0517_0530_SH_Whale.csv  covid19_guangzhou_221123.csv  covid19_guangzhou_221123.xlsx  covid19_shenzhen.csv  data_0419_SH.csv  data_0423_SH.csv  data_0515_SH.csv  data_0515_SH_RAW.csv  data_0516_SH.csv  data_cache_0424.RData  data_cache_0517.RData
report/: references.bib  report.Rmd
reports/220515/: Covid19 Nike_0517.pptx  Covid19 Uniqlo_0517.pptx
scripts/: covid19.ipynb  covid19.py  guangzhou_202211.r  predict.r  viscovid.R
scripts/Guangzhou_202210/: guangzhou_202211.r
scripts/Shanghai_202203/: data.py  predict.r  shanghai_202203.r  vis_data_combine.ipynb  viscovid_sh_test.csv
